2004-09-30  James Henstridge  <james@jamesh.id.au>

	Should fix bug #145394.

	* jhbuild/modtypes/tarball.py (parse_tarball): same here.

	* jhbuild/modtypes/mozillamodule.py (parse_mozillamodule): same
	here.

	* jhbuild/modtypes/archmodule.py (parse_archmodule): same here.

	* jhbuild/modtypes/svnmodule.py (parse_svnmodule): same here.

	* jhbuild/modtypes/base.py (parse_cvsmodule): make the
	module_autogenargs replace the global autogenargs instead of the
	ones defined in the moduleset.  Same for makeargs.
	(AutogenModule): since self.autogenargs and self.makeargs now
	include the global options too, don't explicitly include them.

	* README: update to indicate that tla is only needed to build
	modules managed with Arch.

	* modulesets/gnome-2.10.modules (rhythmbox): same here.

	* modulesets/gnome28.modules (rhythmbox): add this back, and
	change revision attribute to version.

	* jhbuild/modtypes/archmodule.py (parse_archmodule): lookup the
	full "archive/category--branch--version" string in the
	config.branches directory, since if people are overriding the
	location, they are probably overriding the fully specified one.

	* jhbuild/moduleset.py (_parse_module_set): don't register arch
	archives, and get rid of the config.arch_archives dictionary,
	since it doesn't really add much above tla's internal archive
	registration method.

	* modulesets/gnome-2.10.modules: rename from gnome210.modules.

2004-09-29  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/gnome28.modules: Use the pango-1-6 branch.

Mon Sep 27 01:36:07 2004  Jonathan Blandford  <jrb@gnome.org>

	* modulesets/gnome210.modules: add a yelp dependency on mozilla.

2004-09-26  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome28.modules: Use glibmm-2-4 branch.

2004-09-23  Fernando Herrera  <fherrera@onirica.com>

	* modulesets/gnome210.modules: make gnome-applets to depend 
	on gstreamer (for the new volume applet).

2004-09-18  Elijah Newren  <newren@math.utah.edu>
