@@ -1,5 +1,16 @@
 2004-09-30  James Henstridge  <james@jamesh.id.au>
 
+	Patches bug #145398:
+
+	* modulesets/gcj.modules: import Thomas Fitzsimmons's GCJ jhbuild
+	module defintions.
+
+	* jhbuild/modtypes/gdbmodule.py: import Thomas Fitzsimmons's GDB
+	module type.
+
+	* jhbuild/modtypes/gcjmodule.py: import Thomas Fitzsimmons's GCJ
+	module type.
+
 	Should fix bug #145394.
 
 	* jhbuild/modtypes/tarball.py (parse_tarball): same here.
